<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MyResolutions">

    <TextView
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:height="?android:attr/windowTitleSize"
        android:gravity="center"
        android:text="@string/mesRes"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMyResolutions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/prendreResolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/ajouter_une_r_solution" />

    <Button
        android:id="@+id/accueil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/accueil" />
</LinearLayout>